--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,46 @@
-.App {
-  text-align: center;
+.text-completed {
+  color: #d1d1d1;
+  text-decoration: line-through;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.clear-completed:hover {
+  text-decoration: underline;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.delete-btn {
+  display: none;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.task-item:hover .delete-btn {
+  display: block;
 }
 
-.App-link {
-  color: #61dafb;
+.task-item input:focus {
+  outline: none;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.filters button {
+  background: none;
+  cursor: pointer;
+  margin-right: 10px;
+}
+
+.search-place {
+  padding: 20px 0;
+}
+
+.search-place input {
+  outline: none;
+  padding-left: 20px;
+  color: #dddcdc;
+  text-decoration: initial;
+}
+
+.search-place input:focus {
+  color: black;
+  font-style: normal;
+}
+
+.search-place input:focus::-webkit-input-placeholder {
+  opacity: 0;
 }
